Test `load_native_module` with a boost.python module.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,6 @@
 PYTHON ?= python
 
-SUBDIRS = fortran swig # boostpython embeddedpython
+SUBDIRS = fortran swig boostpython # embeddedpython
 
 
 all clean distclean test:
