--- a/tests/boostpython/Makefile
+++ b/tests/boostpython/Makefile
@@ -1,8 +1,17 @@
 
 PYTHON ?= python
-BOOST_INCLUDE_PATH = /data.2/tcarel/root/stow/boost.1.48.0/include
-BOOST_LIBRARY_PATH = /data.2/tcarel/root/stow/boost.1.48.0/lib
-PYTHON_INCLUDE_PATH = -I$(shell $(PYTHON) -c "import distutils.sysconfig as s; print s.get_python_inc()")
+
+CPPFLAGS += -DBOOST_PYTHON_DYNAMIC_LIB
+CPPFLAGS += -I$(shell $(PYTHON) -c "import distutils.sysconfig as s; print s.get_python_inc()")
+
+ifdef BOOST_INCLUDE_PATH
+CPPFLAGS += -I$(BOOST_INCLUDE_PATH)
+endif
+
+ifdef BOOST_LIBRARY_PATH
+LDFLAGS += -Wl,-rpath=$(BOOST_LIBRARY_PATH) \
+	   -L$(BOOST_LIBRARY_PATH)
+endif BOOST_LIBRARY_PATH
 
 TARGET=_hello.so
 
@@ -10,10 +19,10 @@ all: $(TARGET)
 
 
 $(TARGET): hello.o
-	gcc -o $@ -shared -Wl,-rpath=$(BOOST_LIBRARY_PATH) -L$(BOOST_LIBRARY_PATH) -lboost_python $<
+	$(CC) -o $@ -shared $(LDFLAGS)  -lboost_python $<
 
 .cc.o:
-	gcc -c -fpic -DBOOST_PYTHON_DYNAMIC_LIB -I $(BOOST_INCLUDE_PATH) $(PYTHON_INCLUDE_PATH) $< -o $@
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< -o $@
 
 
 clean:
