--- a/tests/lnm_fortran/Makefile
+++ b/tests/lnm_fortran/Makefile
@@ -1,6 +1,9 @@
 PYTHON ?= python
 F2PY ?= f2py
 
+PYTHONPATH := $(PYTHONPATH):$(shell pwd)/../../lib
+export PYTHONPATH
+
 PYMODULE = _fmodule
 
 all: $(PYMODULE).so
@@ -14,4 +17,5 @@ distclean: clean
 	$(RM) $(PYMODULE).so *.pyc
 
 test:
+	@echo PYTHONPATH $(PYTHONPATH)
 	$(PYTHON) test.py
