Bootstrap the project with ./configure

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,15 @@
-TESTS_SUITES = lnm_fortran lnm_swig lnm_boostpython
+ifeq ($(shell [ -f ../env.mk ] && echo 1),1)
+include ../env.mk
+else
+$(error Missing file ../env.mk, please run command ./bootstrap.sh)
+endif
+
+comma := ,
+empty :=
+space := $(empty) $(empty)
+TESTS_SUITES = $(filter-out																			\
+	               $(subst $(comma),$(space),$(DISABLED_TESTS)),	\
+                 lnm_fortran lnm_swig lnm_boostpython)
 
 # If variable NO_TEST_<NAME> is defined, do not add <name> in
 # variable SUBDIRS
